--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -14,10 +14,9 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16.14
-      - run: cd ./nivo_chart/frontend
+          path: nivo_chart/frontend
       - run: yarn
       - run: yarn build
-      - run: cd ../../
       - uses: actions/checkout@master
       - name: Set up Python 3.9
         uses: actions/setup-python@v1
