--- a/.github/workflows/publish-to-test-pypi.yml
+++ b/.github/workflows/publish-to-test-pypi.yml
@@ -31,10 +31,12 @@ jobs:
           --user
       - name: Build a binary wheel and a source tarball
         run: >-
-          python
-          setup.py
-          sdist
-          bdist_wheel
+          python -m
+          build
+          --sdist
+          --wheel
+          --outdir dist/
+          .
       - name: Publish distribution 📦 to Test PyPI
         uses: pypa/gh-action-pypi-publish@master
         with:
