--- a/nivo_chart/frontend/package.json
+++ b/nivo_chart/frontend/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
     "streamlit-component-lib": "^1.3.0"
   },
   "scripts": {
@@ -44,6 +45,7 @@
     "@types/node": "^13.13.4",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.7",
+    "@types/reactstrap": "^8.4.2",
     "typescript": "~3.8.3"
   }
 }
